fixed homepage shifting problem

--- a/wad2-project-vue/src/assets/global.css
+++ b/wad2-project-vue/src/assets/global.css
@@ -15,6 +15,8 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-y: scroll;
+    
 }
 
 .reveal {
